Trap errors for XAddHosts

Apparently this can fail on older systems.

https://bugzilla.gnome.org/show_bug.cgi?id=599683